--- a/css/main.css
+++ b/css/main.css
@@ -45,3 +45,57 @@ a:hover img {
   color: gray;
 }
 
+/* menú */
+
+.menu {
+    width: 100%;
+    height: 35px;
+    font-size: 16px;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 3px 2px 3px #333333;
+    background-color: orange;
+    border-radius: 8px;
+}
+
+
+
+ul, ol {
+	list-style:none;
+}
+.nav > li {
+	float:left;
+}
+.nav li a {
+	background-color:orange;
+	color:white;
+	text-decoration:none;
+	padding:5px 12px;
+	display:block;
+    border-radius: 2px;
+}
+
+.nav li a:hover {
+	background-color:#232323;
+}
+
+.nav li ul {
+	display:none;
+	position:absolute;
+	min-width:10px;
+}
+
+.nav li:hover > ul {
+	display:block;
+}
+
+.nav li ul li {
+	position:relative;
+}
+
+.nav li ul li ul {
+	position:relative;
+	right:-80px;
+	top:0px;
+}
